--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "sass": "^1.77.6",
     "typescript": "^4.9.3",
     "vite": "^5.2.13",
     "vue-tsc": "^1.2.0"
